2.1_002 (201?-??-??):
 - Updated libpng to 1.5.6.
 - Updated libogg to 1.3.3.
 - Updated freetype to 2.4.7.
 - Updated bullet to 2.79.
 - Updated pcre to 8.20.

2.1_001 (2011-05-16):
 - Build more WX libs for MSVC (adv, aui, html, net, xml, xrc).
 - Rebuilt mingw DLLs using newer binutils version.
   Fixes trac issue #905.

2.0_001 (2011-04-23):
 - Updated libpng to 1.5.2.
 - Updated libjpeg to 8c.
 - Updated bullet to 2.78.
 - Updated pcre to 8.12.
 - Updated OpenAL Soft to 1.13.
 - Updated wxWidgets to 2.8.12.

1.9_008 (2010-12-28):
 - Updated cal3d to trunk r507 (aka "0.12").
 - Updated libpng to 1.4.5.
 - Updated freetype to 2.4.4.
 - Updated libogg to 1.2.2.
 - Updated libvorbis to 1.3.2.
 - Updated pcre to 8.11.
 - Updated cegui to 0.7.5.
 - Remove Python <= 2.4 import libs for mingw.

1.9_007 (2010-11-29):
 - Updated libpng to 1.4.4.
 - Updated libjpeg to 8b.
 - Updated freetype to 2.4.3.
 - Updated pcre to 8.10.
 - Updated cegui to 0.7.4.
 - Updated bullet to 2.77.
 - Included x86 and x64 builds of OpenAL Soft 1.12.854.
 - Build libraries for MinGW gcc 4.5 as well.
 - Changed mingw64 gcc version to 4.5.1.
 - Main/support installers now signed.

1.9_006 (2010-05-04):
 - libjpeg struct size mismatch fix.
 - Fixes for static ODE, Freetype on MinGW.

1.9_005 (2010-05-03):
 - Updated Cg to 2.2 February 2010 release.
 - Added BulletSoftBody for VC.
 - Updated libz to 1.2.5.
 - Updated libpng to 1.4.1.
 - Updated libogg to 1.2.0.
 - Updated libvorbis to 1.3.1.
 - Updated freetype to 2.3.12.
 - Updated bullet to 2.76.
 - Updated pcre to 8.02.
 - Updated wx to 2.8.11.
 - Updated libjpeg to 8a.
 - Added support for VC 10.

1.9_004 (2009-12-23):
 - Build "common" libraries using VC9.0.
 - Made common libraries use msvcrt.dll as the runtime.
 - Renamed dbghelp.dll to dbghelp-x64.dll on x64.
 - New directory layout for "VC support".

1.9_003 (2009-12-12):
 - Updated Cg to 2.2 October 2009 release.
 - Updated libpng to 1.2.40.
 - Updated freetype to 2.3.11.