@@ -4,6 +4,8 @@
  - Updated freetype to 2.4.7.
  - Updated bullet to 2.79.
  - Updated pcre to 8.20.
+ - Build libs for MinGW gcc 4.6 as well.
+ - Changed mingw64 gcc version to 4.5.4.
 
 2.1_001 (2011-05-16):
  - Build more WX libs for MSVC (adv, aui, html, net, xml, xrc).
